# alexeyche-junk

./: .Rprofile  .bash_aliases  .gitignore  .vimrc  PScript  RScript  RScriptq  conv.sh  good_commands.sh  graph.py  mind.py  ml.sublime-project  ml.sublime-workspace  r_deps.sh  r_packages.sh  spyder.ini  sublime-keymap  up_distr.sh
cns/c/: .configure.ac.swp  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  core  errs  gmon.out  layer.c  leaks  libtool  massif.out.8958  postproc_stat.idx  renamer.sh  sparse_matrix.c  srm_sim.c
cns/c/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
cns/c/core/: CMakeLists.txt  constants.c  constants.h  core.h
cns/c/core/conn/: CMakeLists.txt  messages.h  net_util.c
cns/c/core/layers/: CMakeLists.txt  adapt.c  adapt.h  layer_old.c  layer_old.h  neuron_funcs.h  new_layer_c.template  new_layer_h.template  poisson.c  poisson.h  wta.c  wta.h  wtaadapt.c  wtaadapt.h
cns/c/core/learn/: CMakeLists.txt  learn.h  optim.c  optim.h  res_stdp.c  res_stdp.h  simple_stdp.c  simple_stdp.h  triple_stdp.c  triple_stdp.h
cns/c/core/sim/: CMakeLists.txt  configure.c  configure.h  netsim.c  netsim.h  runtime.c  runtime.h  serialize.c  sim.h  sim_old.h
cns/c/core/util/: CMakeLists.txt  io.c  io.h  matrix.c  matrix.h  mem.h  spikes_list.h  util.c  util.h  util_dlink_list.c  util_dlink_list.h  util_vector.c  util_vector.h
cns/c/scripts/: .run_prep.sh.swp  .run_rfd.sh.swp  core  eval_model.sh  gmon.out  mean_report_table.R  prep_data.sh  run_prep.sh  run_rfd.sh  run_sim.sh
cns/c/snn_sim/: .Makefile.am.swp  .calc.c.swp  .calc.h.swp  .constants.c.swp  .constants.h.swp  .constants.ini.swp  .layer.c.swp  .neuron_funcs.c.swp  .neuron_funcs.h.swp  .postproc.c.swp  .sim.h.swp  .snn_calc.c.swo  .snn_calc.c.swp  .snn_postproc.c.swp  .snn_sim.c.swp  Makefile  Makefile.am  Makefile.in  actor_sim.h  adex_layer.c  adex_layer.ce  arg_opt.h  arg_opt.he  arg_opt_prep.h  calc.c  calc.h  camera_example.c  constants.c  constants.h  constants.ini  core.h  gamma-lookup.c  io.c  io.h  layer.c  layer.h  learn.h  learn_optim.c  learn_stdp.c  learn_stdp.h  (+21 more)
cns/c/snn_sim/.deps/: __top_builddir__bin_snn_calc-calc.Po  __top_builddir__bin_snn_calc-snn_calc.Po  __top_builddir__bin_snn_filt-snn_filt.Po  __top_builddir__bin_snn_postproc-postproc.Po  __top_builddir__bin_snn_postproc-snn_postproc.Po  __top_builddir__bin_snn_prep-constants.Po  __top_builddir__bin_snn_prep-snn_prep.Po  __top_builddir__bin_snn_sim-constants.Po  __top_builddir__bin_snn_sim-neuron_funcs.Po  __top_builddir__bin_snn_sim-snn_sim.Po  adex_layer.Po  calc.Po  constants.Plo  constants.Po  http_server.Po  io.Po  layer.Po  learn.Po  learn_optim.Po  learn_stdp.Po  matrix.Po  net_sim.Po  neuron_funcs.Plo  neuron_funcs.Po  postproc.Po  sim.Po  sim_configure.Po  sim_netsim.Po  sim_run.Po  sim_serialize.Po  snn_calc.Po  snn_filt.Po  snn_postproc.Po  snn_prep.Po  snn_sim.Po  spikes_list.Po  srm_sim_ut.Po  util_dlink_list.Po
cns/c/snn_sim/args/: .calc_opts.h.swo  .calc_opts.h.swp  calc_opts.h  filt_opts.h  postproc_opts.h  prep_opts.h  sim_opts.h
cns/c/snn_sim/calc/: snn_calc.c
cns/c/snn_sim/conn/: input_socket.c  input_socket.h  messages.c  net_util.h
cns/c/snn_sim/filt/: filt_funcs.h  optim_lbfgs.c  optim_lbfgs.h  snn_filt.c
cns/c/snn_sim/layer/: adex.c
cns/c/snn_sim/layers/: .layer.c.swp  .layer.h.swp  .layer_old.c.swp  .layer_old.h.swp  .layer_poisson.c.swo  .layer_poisson.c.swp  .layer_poisson.h.swp  .layer_wta.c.swp  .layer_wtaadapt.c.swp  .wta.c.swp  adapt.c  adapt.h  adex.h  gen_new_layer.sh  layer.c  layer.h  layer_adapt.c  layer_adapt.h  layer_new_c.template  layer_new_h.template  layer_old.h  layer_poisson.c  layer_poisson.h  layer_wta.c  layer_wta.h  (+10 more)
cns/c/srm_sim/: .Makefile.am.swp  .Makefile.swp  .actor_sim.c.swp  .actor_sim.h.swp  .arg_opt.h.swp  .constants.ini.swp  .io.c.swp  .io.h.swp  .layer.c.swp  .layer.h.swp  .matrix.c.swp  .matrix.h.swp  .net_sim.c.swp  .net_sim.h.swp  .neuron_funcs.c.swp  .sim.c.swp  .sim.h.swp  .sim_configure.c.swp  .sim_io.swp  .sim_netsim.c.swp  .sim_netsim.h.swp  .sim_run.c.swp  .sim_runtime.h.swp  .sim_serialize.c.swp  .srm_sim.c.swp  Makefile  Makefile.am  Makefile.in  actor_sim.c  actor_sim.h  adex_layer.h  arg_opt.h  constants.c  constants.h  constants.ini  core.h  io.c  io.h  layer.c  layer.h  (+26 more)
cns/c/tools/: CMakeLists.txt
cns/cpp/: .const.json.swp  .gitignore  .snn_sim.sublime-project.swp  CMakeLists.txt  Makefile  basic_elements.h  config.cfg  connection.cpp  const.json  core.h  dnn.sublime-project  dnn.sublime-workspace  filter.csv  gainSPSA.m  grep  in.json  main.cpp  make_py_protos.sh  mpl.json  neurons.cpp  neurons.h  out.json  poisson.cpp  poisson.h  poissonelem.cpp  poissonelem.h  s2  sim  simelem.h  simenv.cpp  simenv.h  snn_sim.sublime-workspace  spsa.m  stdout  valout  voltmeter.h
cns/cpp/CMake/: CompilerFlags.cmake
cns/cpp/_sources_old/: CMakeLists.txt
cns/cpp/old/: .gitignore  clean.sh
cns/cpp/r_package/: build.sh  stdout
cns/cpp/scripts/: .common.py.swp  .gitignore  .run_sim.py.swp  .run_sim.sh.swp  common.py  common.sh  config.py  eval_dist_matrix.R  nitime_algs.py  run_mpl.sh  run_sim.py  run_sim.sh
cns/cpp/snn_sim/: CMakeLists.txt
cns/cpp/socket/: build.sh  sim_client.c  sim_server.c  sim_server.cpp  sim_socket_r.c  test.R  test_sock_main.cpp  test_sock_main_serv.cpp
cns/cpp/sources/: .tags  .tags_sorted_by_file  CMakeLists.txt
cns/cpp/src/: CMakeLists.txt  Makefile  basic_elements.h  connection.h  core.h  main.cpp  neurons.cpp  neurons.h  poisson.cpp  poisson.h  simenv.cpp  simenv.h  voltmeter.h
cns/cpp/test_scripts/: .RData  .Rhistory  .compare_best_shot.R.swp  .run_best_int_test.sh.swp  best_shot.csv  compare_best_shot.R  gen_data.R  main.R  plot_lh_test.R  plot_srm_test.R  plot_stdin.R  run_best_int_test.sh  serv.R  tsne_stuff.R
cns/dnn/: CMakeLists.txt  config.pb.txt  generate_protos.py
cns/dnn/R/: Rdnn_1.0.tgz  build.sh
cns/dnn/dnn/: CMakeLists.txt
cns/dnn/models/: CMakeLists.txt
cns/dnn/tools/: CMakeLists.txt
(+2556 files in other folders)
